--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,7 +11,9 @@
 
 {% for obj in object_list %}
 
-{{ obj.title }}<br>
+<!--<a href="/posts/{{ obj.id }}">{{ obj.title }}</a><br>-->
+<!--<a href="{% url 'posts:detail' id=obj.id %}">{{ obj.title }}</a><br>-->
+<a href="{{ obj.get_absolute_url }}">{{ obj.title }}</a><br>
 {{ obj.content }}<br>
 {{ obj.timestamp }}<br>
 {{ obj.id }}<br>
