--- a/src/templates/post_form.html
+++ b/src/templates/post_form.html
@@ -5,10 +5,11 @@
 {% endblock head_title %}
 
 {% block content %}
+<div class='col-sm-6 col-sm-offset-3'>
 <h1>Form</h1>
 
 <form method='POST' action=''>{% csrf_token %}
 {{ form.as_p }}
-<input type='submit' value='Create Post' />
+<input type='submit' class='btn btn-default' value='Create Post' />
 </form>
-{% endblock content %}
+</div>{% endblock content %}
