--- a/src/templates/post_detail.html
+++ b/src/templates/post_detail.html
@@ -13,7 +13,9 @@
     <img src="{{ instance.image.url }}" class="img-responsive" />
     {% endif %}
 <h1>{{ title }} <small>{{ instance.timestamp }}</small></h1>
-
+{% if instance.user %}
+<p>Author: {{ instance.user|title }}</p>
+{% endif %}
 
 
 <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">
