--- a/src/templates/post_list.html
+++ b/src/templates/post_list.html
@@ -19,7 +19,8 @@
        <img src="{{ obj.image.url }}" class="img-responsive" />
         {% endif %}
       <div class="caption">
-        <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a> <small>{{ obj.timestamp|timesince }} ago</small></h3>
+          {% if obj.draft %}<h4><span style='color:red;'>Draft</span></h4>{% endif %}{% if obj.publish > today %}<h4><span style='color:red;'>Future Post</span></h4>{% endif %}
+        <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a> <small>{{ obj.publish }} </small></h3>
           {% if obj.user %}
           <p>Author: {{ obj.user|title }}</p>
           {% endif %}
