--- a/src/templates/post_list.html
+++ b/src/templates/post_list.html
@@ -6,10 +6,15 @@
 {% endblock head_title %}
 
 
+
 {% block content %}
 <!--Custom Thumbnails-->
 <div class='col-sm-6 col-sm-offset-3'>
     <h1>{{ title }}</h1>
+    <form method='GET' action=''>
+        <input type='text' name='q' placeholder='Search posts' value='{{ request.GET.q }}'/>
+        <input type='submit' value='Search' />
+    </form>
 
 {% for obj in object_list %}
 <div class="row">
@@ -36,7 +41,7 @@
 <div class="pagination">
     <span class="step-links">
         {% if object_list.has_previous %}
-            <a href="?{{ page_request_var }}={{ object_list.previous_page_number }}">previous</a>
+            <a href="?{{ page_request_var }}={{ object_list.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">previous</a>
         {% endif %}
 
         <span class="current">
@@ -44,7 +49,7 @@
         </span>
 
         {% if object_list.has_next %}
-            <a href="?{{ page_request_var }}={{ object_list.next_page_number }}">next</a>
+            <a href="?{{ page_request_var }}={{ object_list.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">next</a>
         {% endif %}
     </span>
 </div>
