--- a/src/templates/post_list.html
+++ b/src/templates/post_list.html
@@ -29,7 +29,7 @@
           {% if obj.user %}
           <p>Author: {{ obj.user|title }}</p>
           {% endif %}
-        <p>{{ obj.content|linebreaks|truncatechars:120 }}</p>
+        <p class='content-markdown'>{{ obj.content|truncatechars:120 }}</p>
         <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
       </div>
     </div>
