--- a/src/templates/post_list.html
+++ b/src/templates/post_list.html
@@ -23,13 +23,14 @@
         {% if obj.image %}
        <img src="{{ obj.image.url }}" class="img-responsive" />
         {% endif %}
-      <div class="caption">
+      <div class="caption post-detail-item">
           {% if obj.draft %}<h4><span style='color:red;'>Draft</span></h4>{% endif %}{% if obj.publish > today %}<h4><span style='color:red;'>Future Post</span></h4>{% endif %}
         <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a> <small>{{ obj.publish }} </small></h3>
           {% if obj.user %}
           <p>Author: {{ obj.user|title }}</p>
           {% endif %}
-        <p class='content-markdown'>{{ obj.content|truncatechars:120 }}</p>
+        <p class='content-markdown post-detail-item'>{{ obj.content|truncatechars:120 }}</p>
+          <!--{{ obj.get_markdown|truncatechars_html:20|linebreaks }}-->
         <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
       </div>
     </div>
