--- a/src/templates/post_form.html
+++ b/src/templates/post_form.html
@@ -1,12 +1,17 @@
 {% extends "base.html" %}
 
+<!--{% load crispy_forms_filters %}-->
+
 {% block head_title %}
 {{ title }} | {{ block.super }}
 {% endblock head_title %}
 
+
+
 {% block head_extra %}
 {{ form.media }}
 {% endblock head_extra %}
+
 
 {% block content %}
 
