--- a/src/templates/post_list.html
+++ b/src/templates/post_list.html
@@ -12,8 +12,15 @@
 <div class='col-sm-6 col-sm-offset-3'>
     <h1>{{ title }}</h1>
     <form method='GET' action=''>
-        <input type='text' name='q' placeholder='Search posts' value='{{ request.GET.q }}'/>
-        <input type='submit' value='Search' />
+         <div class='col-sm-6 row'>
+            <div class='input-group'>
+                <input class='form-control' type='text' name='q' placeholder='Search posts' value='{{ request.GET.q }}'/>
+                <span class='input-group-btn'>
+                    <!-- <input class='btn btn-default' type='submit' value='Search' /> -->
+                    <button class='btn btn-default' type='submit'>Search <i class="fa fa-search"></i></button>
+                </span>
+            </div>
+        </div>
     </form>
 
 {% for obj in object_list %}
@@ -29,7 +36,7 @@
           {% if obj.user %}
           <p>Author: {{ obj.user|title }}</p>
           {% endif %}
-        <p class='content-markdown post-detail-item'>{{ obj.content|truncatechars:120 }}</p>
+        <p class='content-markdown post-detail-item'>{{ obj.content|truncatechars_html:150 }}</p>
           <!--{{ obj.get_markdown|truncatechars_html:20|linebreaks }}-->
         <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
       </div>
