--- a/static_cdn/admin/css/base.css
+++ b/static_cdn/admin/css/base.css
@@ -965,3 +965,8 @@ table#change-history tbody th {
 .popup #header {
     padding: 10px 20px;
 }
+
+.wmd-panel{
+    margin-right: 0px !important;
+    margin-left: 0px !important;
+}
