--- a/static_cdn/admin/css/widgets.css
+++ b/static_cdn/admin/css/widgets.css
@@ -563,3 +563,8 @@ select + .related-widget-wrapper-link,
 .related-widget-wrapper-link + .related-widget-wrapper-link {
     margin-left: 7px;
 }
+
+.wmd-panel{
+    margin-right: 0px !important;
+    margin-left: 0px !important;
+}
