--- a/src/templates/post_detail.html
+++ b/src/templates/post_detail.html
@@ -6,9 +6,9 @@
 {{ title }} | {{ block.super }}
 {% endblock head_title %}
 
-<!--{% block post_detail_link %}-->
-  <!--<li><a href='{{ instance.get_absolute_url }}'>{{ instance.title }}</a></li>-->
-  <!--{% endblock %}-->
+{% block post_detail_link %}
+  <li><a href='{{ instance.get_absolute_url }}'>{{ instance.title }}</a></li>
+{% endblock %}
 
 
 {% block content %}
