--- a/src/templates/post_detail.html
+++ b/src/templates/post_detail.html
@@ -22,8 +22,9 @@
 {% endif %}
 
 
-    <p>
-    <a href="{{ instance.get_like_url }}"><button class='btn btn-default' title="Like this post" data-toggle="tooltip" type='submit'><i class="fa fa-thumbs-up" ></i></button></a>  {% if instance.likes.count > 0 %}{{ instance.likes.count }}{% endif %}
+
+        <a href="{{ instance.get_like_url }}"><button class='btn btn-default' title="Like this post" data-toggle="tooltip" type='submit'><i class="fa fa-thumbs-up" ></i></button></a>  {% if instance.likes.count > 0 %}{{ instance.likes.count }} {% endif %}
+     &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ instance.get_dislike_url }}"><button class='btn btn-default' title="Disike this post" data-toggle="tooltip" type='submit'><i class="fa fa-thumbs-down" ></i></button></a>  {% if instance.dislikes.count > 0 %}{{ instance.dislikes.count }} {% endif %}
     </p>
 <!--{% if instance.likes.count > 0 %}-->
 <!--<p>{{ instance.likes.count }} people like this post</p>-->
