--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -27,7 +27,9 @@
 {% block head_extra %} {% endblock head_extra %}
 
 </head>
+<!--<body background="https://fitzdecarts.com/wp-content/uploads/2018/05/Backgrounds-Black-Background-Images-Hd-Clisgramcom-With-Dark-Pics-High-Quality-For-Mobile-Phones.jpg">-->
 <body>
+
 {% include "messages_display.html" %}
 <div class='container'>
     <ol class='breadcrumb'>
