--- a/src/templates/confirm_delete.html
+++ b/src/templates/confirm_delete.html
@@ -18,7 +18,7 @@
             <form method="POST" action="."> {% csrf_token %}
                 <p>A re you sure you want to delete: "<b><i>{{ object.title }}</i></b>"?</p>
               
-                <input type='submit' value='Confirm' class='btn btn-warning'>
+                <input type='submit' value='Confirm' title="Are you sure you want to delete this post? " data-toggle="tooltip" class='btn btn-warning'>
                 <a href='{{ object.get_absolute_url }}' class='btn btn-default'>Cancel</a>
             </form>
         </div>
