--- a/src/templates/post_list.html
+++ b/src/templates/post_list.html
@@ -23,6 +23,7 @@
         </div>
     </form>
 
+
 {% for obj in object_list %}
 <div class="row">
   <div class="col-sm-12">
@@ -38,14 +39,13 @@
           {% endif %}
         <p class='content-markdown post-detail-item'>{{ obj.content|truncatechars_html:150 }}</p>
           <!--{{ obj.get_markdown|truncatechars_html:20|linebreaks }}-->
-        <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
+        <p><a href="{{ obj.get_absolute_url }}" title="View this post" data-toggle="tooltip" class="btn btn-primary" role="button">View</a></p>
       </div>
     </div>
   </div>
 <hr/>
 </div>
 {% endfor %}
-
 <div class="pagination">
     <span class="step-links">
         {% if object_list.has_previous %}
@@ -61,7 +61,6 @@
         {% endif %}
     </span>
 </div>
-
 </div>
 
 {% endblock content %}
